--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,10 +26,10 @@
             <p class="site-description">{{ site.description }}</p>
           </div>
 
-          <!--<nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-          </nav>-->
+          <nav>
+            <a href="{{ site.baseurl }}/">Home</a>
+            <a href="{{ site.baseurl }}/research">Research</a>
+          </nav>
         </header>
       </div>
     </div>
